--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="ImmoFacile - Immobilier Facile - Gestion simplifiée des locataires et quittances de loyer" />
+    <meta name="keywords" content="immobilier, gestion locative, quittance de loyer, locataires, propriétaire" />
+    <title>ImmoFacile - Immobilier Facile</title>
   </head>
   <body>
     <div id="root"></div>
